--- a/tools.html
+++ b/tools.html
@@ -24,8 +24,8 @@
     <!-- This script has the Autocomplete fields list, it is a big list of Australian suburbs and postcodes -->
     <script src='suburbList.js'></script>
 
-    <!-- Layer switcher OL extension -->
-    <script src='http://raw.githack.com/walkermatt/ol-layerswitcher/master/dist/ol-layerswitcher.js'></script>
+    <!-- Layer switcher OL extension, credit to http://raw.githack.com/walkermatt/ol-layerswitcher/master/dist/ol-layerswitcher.js -->
+    <script src='ol-layerswitcher.js'></script>
     <link href="layerSwitcher.css" rel="stylesheet">
 
     <link rel="stylesheet" href="style.css">
