--- a/about.html
+++ b/about.html
@@ -30,12 +30,12 @@
         <div class="body_text module"> 
 
             <div class="mod_text">
-                <p> The first finished version of Osmia was conceived by 2hu4u on 30<sup>th</sup> May 2024. 2hu4u has been one of Australia's most active OpenStreetMap contributors since 2020 and is a big fan of all things free and open source. 2hu4u was, at the time of publication, a postgraduate Geospatial student at Curtin University. 2hu4u's undergraduate education was in Photovoltaics (Solar) energy engineering at University of NSW in Sydney.<br />
+                <p> The first finished version of Osmia was conceived by radiotrefoil on 30<sup>th</sup> May 2024. radiotrefoil has been one of Australia's most active OpenStreetMap contributors since 2020 and is a big fan of all things free and open source. radiotrefoil was, at the time of publication, a postgraduate Geospatial student at Curtin University. radiotrefoil's undergraduate education was in Photovoltaics (Solar) energy engineering at University of NSW in Sydney.<br />
                     
                 <ul>
-                    <li><a target="_blank" href="https://www.openstreetmap.org/user/2hu4u">2hu4u's OpenStreetMap account</a></li>
-                    <li><a target="_blank" href="https://en.wikipedia.org/wiki/User:Radiotrefoil">2hu4u's Wikipedia account</a></li>
-                    <li><a target="_blank" href="https://github.com/2hu4u">2hu4u's (very bare) Github</a></li>
+                    <li><a target="_blank" href="https://www.openstreetmap.org/user/radiotrefoil">radiotrefoil's OpenStreetMap account</a></li>
+                    <li><a target="_blank" href="https://en.wikipedia.org/wiki/User:Radiotrefoil">radiotrefoil's Wikipedia account</a></li>
+                    <li><a target="_blank" href="https://github.com/radiotrefoil">radiotrefoil's (very bare) Github</a></li>
                 </ul>
                 <br />
                 The name <i>Osmia</i> is derived from the bee genus, as well as being a pun on "OSM". I thought that it could reference the bee's reputation for collaborative work, but it turns out that this particular bee genus members are solitary and do not actually have workers like honey bees do. I suppose that is amusing too.
@@ -89,7 +89,7 @@
 
     </div>
     <footer class="thecontainer">
-        <div><a href="https://github.com/2hu4u/Osmia">Github Code</a></div>
+        <div><a href="https://github.com/radiotrefoil/Osmia">Github Code</a></div>
         <div><a href="https://creativecommons.org/licenses/by-sa/4.0/deed.en" target="_blank"><img src="https://mirrors.creativecommons.org/presskit/buttons/88x31/svg/by-sa.svg" style="height:30px;"></a></div>
         <div><a href="about.html">About</a></div>
         <div>&copy; <a target="_blank" href="http://www.openstreetmap.org/copyright">OpenStreetMap contributors</a></div>
