--- a/tools.html
+++ b/tools.html
@@ -204,7 +204,7 @@
     </div>
 
     <footer class="thecontainer">
-        <div><a href="https://github.com/2hu4u/Osmia">Github Code</a></div>
+        <div><a href="https://github.com/radiotrefoil/Osmia">Github Code</a></div>
         <div><a href="https://creativecommons.org/licenses/by-sa/4.0/deed.en" target="_blank"><img src="https://mirrors.creativecommons.org/presskit/buttons/88x31/svg/by-sa.svg" style="height:30px;"></a></div>
         <div><a href="about.html">About</a></div>
         <div>&copy; <a target="_blank" href="http://www.openstreetmap.org/copyright">OpenStreetMap contributors</a></div>
